# FGCM_MEG_ANA

./: .gitignore  AGENTS.md  FGT_MEG_subject_list.csv  PLAN.md  README.md  config.py.template  main.py  megprep_fgcm_audiotest_fsaverage.config  pyproject.toml
dfgt/: __init__.py  bids.py  config.py  io.py  preproc.py  utils.py
notebooks/: 00_matlab_test.ipynb  00_setup.ipynb  01_data_exploration.ipynb
scripts/: convert_to_bids.py
